--- a/dal/CMakeLists.txt
+++ b/dal/CMakeLists.txt
@@ -1,20 +1,26 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.14)
 
 project(dal LANGUAGES CXX)
 
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 COMPONENTS Core REQUIRED)
-include_directories(${Qt6Core_INCLUDE_DIRS})
-
-# Find and include the Qt6 package with SQL module
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
 find_package(Qt6 COMPONENTS Core Sql REQUIRED)
 
-add_executable(dal main.cpp dbexecutor.cpp querybuilder.cpp idatamodel.h dbexecutor.h querybuilder.h)
-target_link_libraries(dal PRIVATE Qt6::Core Qt6::Sql)
-
-install(TARGETS dal
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+add_library(dal SHARED
+  dal_global.h
+  idatamodel.h
+  dbexecutor.h
+  querybuilder.h
+  dbexecutor.cpp
+  querybuilder.cpp
 )
+
+target_link_libraries(dal PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Sql)
+
+target_compile_definitions(dal PRIVATE DAL_LIBRARY)
