Create class HTTPRequestManager and move sendHTTPPostRequest and sendHTTPGetRequest into it

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -30,6 +30,8 @@ set(PROJECT_SOURCES
         clientsession.cpp
         category.h
         category.cpp
+        HTTPRequestManager.cpp
+        HTTPRequestManager.h
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
