--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -22,6 +22,7 @@ include_directories(${Qt6Core_INCLUDE_DIRS})
 # Add the category.cpp file to the project sources
 list(APPEND PROJECT_SOURCES "../common/model/category.cpp")
 list(APPEND PROJECT_SOURCES "../common/model/subcategory.cpp")
+list(APPEND PROJECT_SOURCES "../common/constants.cpp")
 list(APPEND PROJECT_SOURCES "../dal/querybuilder.h")
 list(APPEND PROJECT_SOURCES "../dal/querybuilder.cpp")
 list(APPEND PROJECT_SOURCES "../dal/dbexecutor.h")
