--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -13,39 +13,43 @@ find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 set(PROJECT_SOURCES
-        main.cpp
-        loginwindow.cpp
-        loginwindow.h
-        client.cpp
-        client.h
-        adminpage.cpp
-        adminpage.h
-        loginwindow.ui
-        adminpage.ui
-        admininfowidget.h
-        admininfowidget.cpp
-        dropdownmenu.h
-        dropdownmenu.cpp
-        clientsession.h
-        clientsession.cpp
-        HTTPRequestManager.cpp
-        HTTPRequestManager.h
-        menubutton.cpp
-        menubutton.h
-        addcategory.cpp
-        addcategory.h
-        addcategory.ui
-        hmenu.h
-        hmenu.cpp
-        hmenuitem.h
-        hmenuitem.cpp
-        addsubcategory.cpp
-        addsubcategory.h
-        addcategory.ui
-        customcontextmenu.cpp
-        customcontextmenu.h
-        teamsui.h
-        teamsui.cpp
+    main.cpp
+    loginwindow.cpp
+    loginwindow.h
+    client.cpp
+    client.h
+    adminpage.cpp
+    adminpage.h
+    loginwindow.ui
+    adminpage.ui
+    admininfowidget.h
+    admininfowidget.cpp
+    dropdownmenu.h
+    dropdownmenu.cpp
+    clientsession.h
+    clientsession.cpp
+    HTTPRequestManager.cpp
+    HTTPRequestManager.h
+    menubutton.cpp
+    menubutton.h
+    addcategory.cpp
+    addcategory.h
+    addcategory.ui
+    hmenu.h
+    hmenu.cpp
+    hmenuitem.h
+    hmenuitem.cpp
+    addsubcategory.cpp
+    addsubcategory.h
+    addcategory.ui
+    customcontextmenu.cpp
+    customcontextmenu.h
+    teamsui.h
+    teamsui.cpp
+    tableWidget.h
+    tableWidget.cpp
+    resizableWidget.h
+    resizableWidget.cpp
 )
 
 
@@ -72,13 +76,13 @@ else()
         add_library(Client SHARED
             ${PROJECT_SOURCES}
         )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-    else()
-        add_executable(Client
-            ${PROJECT_SOURCES}
-        )
-    endif()
+    # Define properties for Android with Qt 5 after find_package() calls as:
+    #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
+else()
+    add_executable(Client
+        ${PROJECT_SOURCES}
+    )
+endif()
 endif()
 
 target_link_libraries(Client PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
