Add data in teams table

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -104,7 +104,7 @@ install(TARGETS Client
 #Poco installation start
 
 # Set the POCO library directory
-set(POCO_DIR "D:/MSYS/mingw64")
+set(POCO_DIR "C:/msys64/mingw64")
 
 # Include directories for POCO
 
