Created team widget and teams layout.

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -50,6 +50,11 @@ set(PROJECT_SOURCES
     tableWidget.cpp
     resizableWidget.h
     resizableWidget.cpp
+    addteams.cpp
+    addteams.h
+    addteams.ui
+    teamcontextmenu.cpp
+    teamcontextmenu.h
 )
 
 
