EditPopup/DeletePopup UI + integration

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -55,6 +55,12 @@ set(PROJECT_SOURCES
     addteams.ui
     teamcontextmenu.cpp
     teamcontextmenu.h
+    deletepopup.h
+    deletepopup.ui
+    deletepopup.cpp
+    editpopup.h
+    editpopup.cpp
+
 )
 
 
